# fastapi-ready

./: .env  GENERATED_README.md  README.md  fastapi_ready.py  main.py  pyproject.toml  verify_scaffold.py
.github/workflows/: ci.yml  workflow.yml
auth/: auth.py
config/: settings.py
core/: deps.py
db/: __init__.py  database.py
models/: users.py
router/: auth.py
schemas/: users.py
