[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-ready"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"fastapi>=0.124.4",
	"uvicorn[standard]>=0.33.0",
	"sqlalchemy>=2.0.49",
	"asyncpg>=0.30.0",
	"passlib[bcrypt]>=1.7.4",
	"bcrypt<5",
	"python-jose[cryptography]>=3.4.0",
	"python-dotenv>=1.0.1",
	"email-validator>=2.3.0",
]

[project.scripts]
fastapi-ready = "fastapi_ready:main"

[tool.setuptools]
py-modules = ["main", "auth", "deps", "models", "schemas", "fastapi_ready"]

[tool.setuptools.packages.find]
include = ["config*", "db*", "router*"]
exclude = ["auth*", "core*"]
